# Hadara-AdSimul

./: CMakeLists.txt  README.md
DataSet2/: results.txt~
Source/: CGraph.cpp  CGraph.h  CGraphUtility.cpp  CGraphUtility.h  CPetriNet.cpp  CPetriNet.h  CWFGenerator.cpp  CWFGenerator.h  CWFReducer.cpp  CWFReducer.h  IBase.h  mainGen.cpp  mainRed.cpp  mainRedBatch.cpp  mainRedWeb.cpp  mainToSpin.cpp
Source/CGraph/: CGraph.h  CGraphUtility.cpp  CGraphUtility.h  CPetriNet.h
Source/CVars/: CVar.h  CVarManager.cpp  CVarManager.h
testSet1/: results.txt  runRed.sh  wf100-1.xml  wf100-2.xml  wf1000-1.xml  wf1000-2.xml  wf1100-1.xml  wf1100-2.xml  wf1200-1.xml  wf1200-2.xml  wf1300-1.xml  wf1300-2.xml  wf1400-1.xml  wf1400-2.xml  wf1500-1.xml  wf1500-2.xml  wf1600-1.xml  wf1600-2.xml  wf1700-1.xml  wf1700-2.xml  wf1800-1.xml  wf1800-2.xml  wf1900-1.xml  wf1900-2.xml  wf200-1.xml  wf200-2.xml  wf2000-1.xml  wf2000-2.xml  wf2100-1.xml  wf2100-2.xml  wf2200-1.xml  wf2200-2.xml  wf2300-1.xml  wf2300-2.xml  wf2400-1.xml  wf2400-2.xml  wf2500-1.xml  wf2500-2.xml  wf2600-1.xml  wf2600-2.xml  (+62 more)
